--- a/TODO.org
+++ b/TODO.org
@@ -10,5 +10,14 @@
 ** DONE N when < 1000 N
 ** DONE kN when < 1000000 N
 * DONE Drop out of timewarp on depletion of any resource
-* TODO Scale energy to more realistic amount
+* DONE Scale energy to more realistic amount
 * DONE Show resource consumption
+* TODO Bug: At time warps >= 100X, energy use doesn't balance with sample craft
+** Sample craft: 1 ion engine, 2 gigantor XL solar arrays, Z-200 battery
+** 5% throttle
+** At 100x and 1000x, batteries a little low
+** At 1000x, batteries ~50%
+** At max warp, batteries deplete, but vessel doesn't shutdown
+* TODO Test if this works for multiple engines and sails [0/2]
+** TODO Multiple engines
+** TODO Multiple sails
