--- a/README.org
+++ b/README.org
@@ -4,9 +4,11 @@ systems like ion engines and solar sails to operate during time warp.
 ** Requirements
 - [[http://forum.kerbalspaceprogram.com/threads/55219-Module-Manager-1-5-6-%28Jan-6%29][ModuleManager]]
 ** What works
-- Continuous thrust engines and solar sail continue thrusting during realtime and timewarp
-- Continuous thrust engine propellant mass and other resources depleted during timewarp
-- Continuous thrust engine throttle stays set from realtime to timewarp and back
+- Engines and solar sail continue thrusting during realtime and timewarp
+- Engine propellant mass and other resources depleted during timewarp
+- Engine throttle stays set from realtime to timewarp and back
+- Engines with multiple propellants (e.g. liquid fuel & oxidizer) plus
+  massless propellants (e.g. ElectricCharge)
 ** What doesn't work
 - Continuous thrust engine throttle and sail attitude can't be changed during timewarp
 - Operating engines during timewarp while on a suborbital trajectory
