--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,3 +1,5 @@
+* v1.0.3
+- Made densityAverage public for external use
 * v1.0.2
 - Modularized the physics update in OnFixedUpdate so that intermediate
   methods calculate and apply the delta-V and resource consumption.
