--- a/TODO.org
+++ b/TODO.org
@@ -69,7 +69,9 @@
 ** TODO Apply a reduced deltaV
 ** TODO Flag depletion
 * TODO Do we want to calculate PersistentThrust as a function of PersistentThrottle, minThrust, and maxThrust? :FEATURE:
-* TODO Make PersistentEngine a separate addon that uses existing ModuleEngines* module [0/1] :FEATURE:
-** TODO Add "engine" field to class
+* TODO Make PersistentEngine a separate addon that uses existing ModuleEngines* module [0/5] :FEATURE:
+** TODO Add "engine" field to PersistentEngine class
 ** TODO Make class inherit PartModule
 ** TODO Use "engine" field instead of direct fields
+** TODO Make module search vessel for ModuleEngine* module
+** TODO Update ion engine config to add PersistentEngine instead of replace ModuleEnginesFX
