PersistentEngine now a PartModule, not ModuleEngines. It finds those and uses them on the same part.

--- a/TODO.org
+++ b/TODO.org
@@ -69,9 +69,10 @@
 ** TODO Apply a reduced deltaV
 ** TODO Flag depletion
 * TODO Do we want to calculate PersistentThrust as a function of PersistentThrottle, minThrust, and maxThrust? :FEATURE:
-* TODO Make PersistentEngine a separate addon that uses existing ModuleEngines* module [0/5] :FEATURE:
-** TODO Add "engine" field to PersistentEngine class
-** TODO Make class inherit PartModule
-** TODO Use "engine" field instead of direct fields
-** TODO Make module search vessel for ModuleEngine* module
-** TODO Update ion engine config to add PersistentEngine instead of replace ModuleEnginesFX
+* TODO Make PersistentEngine a separate addon that uses existing ModuleEngines* module [5/6] :FEATURE:
+** DONE Add "engine" field to PersistentEngine class
+** DONE Make class inherit PartModule
+** DONE Use "engine" field instead of direct fields
+** DONE Make module search vessel for ModuleEngine* module
+** DONE Update ion engine config to add PersistentEngine instead of replace ModuleEnginesFX
+** TODO Disable persistent features when ModuleEngine not found
