--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,3 +1,5 @@
+* v1.0.6
+- Recompiled with KSP 1.1.3
 * v1.0.5
 - Updated and tested to compile and run with KSP 1.1
 - Added DLLs to compile with KSP 1.1: KSPUtil and UnityEngine.UI
