--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -1,3 +1,5 @@
+* v1.0.7
+- Updated to compile with KSP 1.2
 * v1.0.6
 - Recompiled with KSP 1.1.3
 - Fixed bug where thrust (and propellant usage) was being applied twice
